--- a/food-journal/2025-11-30.md
+++ b/food-journal/2025-11-30.md
@@ -1,15 +1,15 @@
 # Saturday 30th, 2025
 
-Morning protein foundations set (pulled pork tastings + snack). Lunch added a chicken wrap with truffle mayo, 1 chicken nugget, and 3 more coffees with milk: substantial protein and fats; carbs moderate; fiber still low. Mid-day totals: ~907 cal, ~57g protein. Focus next on fiber (veg/whole grains) and lean protein to avoid overshooting fats while advancing toward 160g protein.
+Morning protein foundations set (pulled pork tastings + snack). Lunch added a chicken wrap with truffle mayo, 1 chicken nugget, and 3 more coffees with milk: substantial protein and fats; carbs moderate; fiber still low. Afternoon snack added 2 more forks of pulled pork to boost protein without carbs. Totals: ~978 cal, ~66g protein. Focus next on fiber (veg/whole grains) and lean protein to avoid overshooting fats while advancing toward 160g protein.
 
 ## Nutritional Facts
 
 | Nutritional Facts | Goal | Consumed | Progress |
 |-------------------|-----:|---------:|---------:|
-| Calories          | 2100 |      907 |      43% |
+| Calories          | 2100 |      978 |      47% |
 | Carbs             | 230g |       68 |      30% |
-| Fats              |  70g |     47.7 |      68% |
-| Proteins          | 160g |     57.3 |      36% |
+| Fats              |  70g |     48.6 |      69% |
+| Proteins          | 160g |     66.4 |      42% |
 | Fibers            |  35g |        3 |       9% |
 
 ## Entries
@@ -66,6 +66,19 @@ Solid macro intake driven by wrap + mayo; fats advanced rapidly (57% of daily) w
 	_~120cal, 15g carbs, 9g fat, 3g protein_
 
 ### Afternoon Snack
+
+Protein-only top-up; minimal fat, zero carbs. Good choice to raise protein while keeping carbs steady.
+
+| Nutritional Facts | Consumed | Impact (vs Goal) |
+|-------------------|---------:|-----------------:|
+| Calories          |       71 |              3% |
+| Carbs             |        0 |              0% |
+| Fats              |      0.9 |              1% |
+| Proteins          |      9.1 |              6% |
+| Fibers            |        0 |              0% |
+
+- Pulled pork (2 forks, ~25g)
+	_~71cal, 0g carbs, ~0.9g fat, ~9.1g protein_
 
 ### Dinner
 
