--- a/food-journal/2025-11-30.md
+++ b/food-journal/2025-11-30.md
@@ -1,16 +1,16 @@
 # Saturday 30th, 2025
 
-Morning protein foundations set (pulled pork tastings + snack). Lunch added a chicken wrap with truffle mayo, 1 chicken nugget, and 3 more coffees with milk: substantial protein and fats; carbs moderate; fiber still low. Afternoon snack added 2 more forks of pulled pork to boost protein without carbs. Totals: ~978 cal, ~66g protein. Focus next on fiber (veg/whole grains) and lean protein to avoid overshooting fats while advancing toward 160g protein.
+Protein steadily accumulated through pork tastings, wrap, and snacks. Dinner (pork + salad + 2 yellow kiwis) pushed protein high (~128g ≈80% of goal) while fats are effectively capped (~99%). Kiwi addition improved fiber and micronutrients; carbs remain moderate. For any night intake, favor lean protein and high fiber with negligible fat.
 
 ## Nutritional Facts
 
 | Nutritional Facts | Goal | Consumed | Progress |
 |-------------------|-----:|---------:|---------:|
-| Calories          | 2100 |      978 |      47% |
-| Carbs             | 230g |       68 |      30% |
-| Fats              |  70g |     48.6 |      69% |
-| Proteins          | 160g |     66.4 |      42% |
-| Fibers            |  35g |        3 |       9% |
+| Calories          | 2100 |     1718 |      82% |
+| Carbs             | 230g |      108 |      47% |
+| Fats              |  70g |     69.1 |      99% |
+| Proteins          | 160g |    127.9 |      80% |
+| Fibers            |  35g |     11.4 |      33% |
 
 ## Entries
 
@@ -81,5 +81,22 @@ Protein-only top-up; minimal fat, zero carbs. Good choice to raise protein while
 	_~71cal, 0g carbs, ~0.9g fat, ~9.1g protein_
 
 ### Dinner
+
+Heavy protein and fats from pork and olive oil; kiwis boosted fiber, vitamin C, and potassium without adding fat. Fats now essentially capped; good micronutrient upgrade.
+
+| Nutritional Facts | Consumed | Impact (vs Goal) |
+|-------------------|---------:|-----------------:|
+| Calories          |      740 |             35% |
+| Carbs             |       40 |             17% |
+| Fats              |     20.5 |             29% |
+| Proteins          |     61.5 |             38% |
+| Fibers            |      8.4 |             24% |
+
+- Pulled pork (160g)
+	_~454cal, 0g carbs, ~5.3g fat, ~58.7g protein_
+- Salad: cherry tomatoes (200g), olive oil (1 tbsp), balsamic vinegar splash
+	_~166cal, 10g carbs, ~14.4g fat, ~1.8g protein, ~2.4g fiber_
+- Yellow kiwi (2)
+	_~120cal, 30g carbs, ~0.8g fat, ~1g protein, ~6g fiber_
 
 ### Night Snack
