--- a/food-journal/2025-11-30.md
+++ b/food-journal/2025-11-30.md
@@ -1,16 +1,16 @@
 # Saturday 30th, 2025
 
-Protein steadily accumulated through pork tastings, wrap, and snacks. Dinner (pork + salad + 2 yellow kiwis) pushed protein high (~128g ≈80% of goal) while fats are effectively capped (~99%). Kiwi addition improved fiber and micronutrients; carbs remain moderate. For any night intake, favor lean protein and high fiber with negligible fat.
+Protein steadily accumulated through pork tastings, wrap, and snacks. Dinner (pork + salad + 2 yellow kiwis) pushed protein high (~129g ≈81% of goal) while late sweets nudged fats slightly above target (~109%). Kiwi addition improved fiber and micronutrients; carbs remain moderate. For any night intake, favor lean protein and high fiber with negligible added sugar.
 
 ## Nutritional Facts
 
 | Nutritional Facts | Goal | Consumed | Progress |
 |-------------------|-----:|---------:|---------:|
-| Calories          | 2100 |     1718 |      82% |
-| Carbs             | 230g |      108 |      47% |
-| Fats              |  70g |     69.1 |      99% |
-| Proteins          | 160g |    127.9 |      80% |
-| Fibers            |  35g |     11.4 |      33% |
+| Calories          | 2100 |     1862 |      89% |
+| Carbs             | 230g |    126.8 |      55% |
+| Fats              |  70g |     76.1 |     109% |
+| Proteins          | 160g |    128.9 |      81% |
+| Fibers            |  35g |     12.9 |      37% |
 
 ## Entries
 
@@ -100,3 +100,18 @@ Heavy protein and fats from pork and olive oil; kiwis boosted fiber, vitamin C, 
 	_~120cal, 30g carbs, ~0.8g fat, ~1g protein, ~6g fiber_
 
 ### Night Snack
+
+Small sweet add-on added quick carbs and pushed fats over target; keep late-night treats lighter or swap for fruit/tea to protect sleep and macros.
+
+| Nutritional Facts | Consumed | Impact (vs Goal) |
+|-------------------|---------:|-----------------:|
+| Calories          |      144 |              7% |
+| Carbs             |     18.8 |              8% |
+| Fats              |        7 |             10% |
+| Proteins          |        1 |              1% |
+| Fibers            |      1.5 |              4% |
+
+- Dark chocolate 60% (~20g)
+	_~110cal, ~10g carbs, ~7g fat, ~1g protein, ~1.5g fiber_
+- Maple syrup (2 sips, ~10ml)
+	_~34cal, ~8.8g carbs_
