--- a/food-journal/2025-12-01.md
+++ b/food-journal/2025-12-01.md
@@ -1,15 +1,15 @@
 # Monday 1st, 2025
 
-Only coffee logged so far; macros minimal. Plenty of room to meet protein and fiber goals—plan a protein-forward breakfast or lunch and add fruit/whole grains for fiber.
+Coffee-focused start; macros still minimal. Add protein (eggs, yogurt) and fiber (fruit/whole grains) at upcoming meals to balance the day.
 
 ## Nutritional Facts
 
 | Nutritional Facts | Goal | Consumed | Progress |
 |-------------------|-----:|---------:|---------:|
-| Calories          | 2100 |       80 |       4% |
-| Carbs             | 230g |       10 |       4% |
-| Fats              |  70g |        6 |       9% |
-| Proteins          | 160g |        2 |       1% |
+| Calories          | 2100 |      120 |       6% |
+| Carbs             | 230g |       15 |       7% |
+| Fats              |  70g |        9 |      13% |
+| Proteins          | 160g |        3 |       2% |
 | Fibers            |  35g |        0 |       0% |
 
 ## Entries
@@ -20,14 +20,14 @@ Simple coffee start; add protein (eggs, yogurt) and fiber (fruit/whole grains) n
 
 | Nutritional Facts | Consumed | Impact (vs Goal) |
 |-------------------|---------:|-----------------:|
-| Calories          |       80 |              4% |
-| Carbs             |       10 |              4% |
-| Fats              |        6 |              9% |
-| Proteins          |        2 |              1% |
+| Calories          |      120 |              6% |
+| Carbs             |       15 |              7% |
+| Fats              |        9 |             13% |
+| Proteins          |        3 |              2% |
 | Fibers            |        0 |              0% |
 
-- Coffee (2) with milk (~30ml each)
-        _~80cal, ~10g carbs, ~6g fat, ~2g protein_
+- Coffee (3) with milk (~30ml each)
+        _~120cal, ~15g carbs, ~9g fat, ~3g protein_
 
 ### Morning Snack
 
