Update breakfast entry for 2025-12-01

--- a/food-journal/2025-12-01.md
+++ b/food-journal/2025-12-01.md
@@ -1,33 +1,35 @@
 # Monday 1st, 2025
 
-Coffee-focused start; macros still minimal. Add protein (eggs, yogurt) and fiber (fruit/whole grains) at upcoming meals to balance the day.
+Solid breakfast with protein and whole grains; day is still open, so keep later meals lighter on carbs/fats and add vegetables to balance.
 
 ## Nutritional Facts
 
 | Nutritional Facts | Goal | Consumed | Progress |
 |-------------------|-----:|---------:|---------:|
-| Calories          | 2100 |      120 |       6% |
-| Carbs             | 230g |       15 |       7% |
-| Fats              |  70g |        9 |      13% |
-| Proteins          | 160g |        3 |       2% |
-| Fibers            |  35g |        0 |       0% |
+| Calories          | 2100 |      480 |      23% |
+| Carbs             | 230g |       64 |      28% |
+| Fats              |  70g |       18 |      26% |
+| Proteins          | 160g |       28 |      18% |
+| Fibers            |  35g |        5 |      14% |
 
 ## Entries
 
 ### Breakfast
 
-Simple coffee start; add protein (eggs, yogurt) and fiber (fruit/whole grains) next to balance the day.
+Protein-forward open-faced sandwiches added; breakfast now covers a quarter of daily calories, so keep lunch/dinner vegetable-heavy with lean protein.
 
 | Nutritional Facts | Consumed | Impact (vs Goal) |
 |-------------------|---------:|-----------------:|
-| Calories          |      120 |              6% |
-| Carbs             |       15 |              7% |
-| Fats              |        9 |             13% |
-| Proteins          |        3 |              2% |
-| Fibers            |        0 |              0% |
+| Calories          |      480 |             23% |
+| Carbs             |       64 |             28% |
+| Fats              |       18 |             26% |
+| Proteins          |       28 |             18% |
+| Fibers            |        5 |             14% |
 
 - Coffee (3) with milk (~30ml each)
         _~120cal, ~15g carbs, ~9g fat, ~3g protein_
+- Open-faced turkey, cheese, and cucumber on whole-grain bread (2 slices, deli turkey, 1 cheese slice, cucumber)
+        _~360cal, ~49g carbs, ~9g fat, ~25g protein, ~5g fiber_
 
 ### Morning Snack
 
