Add lunch banana entry

--- a/food-journal/2025-12-01.md
+++ b/food-journal/2025-12-01.md
@@ -1,16 +1,16 @@
 # Monday 1st, 2025
 
-Solid breakfast with protein and whole grains; day is still open, so keep later meals lighter on carbs/fats and add vegetables to balance.
+Solid breakfast with protein and whole grains; added quick-carb fruit at lunch, so keep later meals lean with vegetables to balance.
 
 ## Nutritional Facts
 
 | Nutritional Facts | Goal | Consumed | Progress |
 |-------------------|-----:|---------:|---------:|
-| Calories          | 2100 |      480 |      23% |
-| Carbs             | 230g |       64 |      28% |
-| Fats              |  70g |       18 |      26% |
-| Proteins          | 160g |       28 |      18% |
-| Fibers            |  35g |        5 |      14% |
+| Calories          | 2100 |      690 |      33% |
+| Carbs             | 230g |      118 |      51% |
+| Fats              |  70g |     18.6 |      27% |
+| Proteins          | 160g |     28.8 |      18% |
+| Fibers            |  35g |       11 |      31% |
 
 ## Entries
 
@@ -45,15 +45,18 @@ No entries logged yet.
 
 ### Lunch
 
-No entries logged yet.
+Quick fruit boost adds carbs; keep the next meal protein-forward with veggies to steady blood sugar.
 
 | Nutritional Facts | Consumed | Impact (vs Goal) |
 |-------------------|---------:|-----------------:|
-| Calories          |        0 |              0% |
-| Carbs             |        0 |              0% |
-| Fats              |        0 |              0% |
-| Proteins          |        0 |              0% |
-| Fibers            |        0 |              0% |
+| Calories          |      210 |             10% |
+| Carbs             |       54 |             23% |
+| Fats              |      0.6 |              1% |
+| Proteins          |      0.8 |              1% |
+| Fibers            |        6 |             17% |
+
+- Bananas (2 medium)
+        _~210cal, ~54g carbs, ~0.6g fat, ~0.8g protein, ~6g fiber_
 
 ### Afternoon Snack
 
