--- a/food-journal/2025-12-01.md
+++ b/food-journal/2025-12-01.md
@@ -1,16 +1,16 @@
 # Monday 1st, 2025
 
-Solid breakfast with protein and whole grains; added quick-carb fruit at lunch, so keep later meals lean with vegetables to balance.
+Solid breakfast with protein and whole grains; two fruit breaks added carbs, so keep dinner protein- and vegetable-heavy to balance.
 
 ## Nutritional Facts
 
 | Nutritional Facts | Goal | Consumed | Progress |
 |-------------------|-----:|---------:|---------:|
-| Calories          | 2100 |      690 |      33% |
-| Carbs             | 230g |      118 |      51% |
-| Fats              |  70g |     18.6 |      27% |
-| Proteins          | 160g |     28.8 |      18% |
-| Fibers            |  35g |       11 |      31% |
+| Calories          | 2100 |      900 |      43% |
+| Carbs             | 230g |      172 |      75% |
+| Fats              |  70g |     19.2 |      27% |
+| Proteins          | 160g |     29.6 |      19% |
+| Fibers            |  35g |       17 |      49% |
 
 ## Entries
 
@@ -60,15 +60,18 @@ Quick fruit boost adds carbs; keep the next meal protein-forward with veggies to
 
 ### Afternoon Snack
 
-No entries logged yet.
+Extra fruit adds quick carbs; aim for protein and veggies at dinner to level out the macro balance.
 
 | Nutritional Facts | Consumed | Impact (vs Goal) |
 |-------------------|---------:|-----------------:|
-| Calories          |        0 |              0% |
-| Carbs             |        0 |              0% |
-| Fats              |        0 |              0% |
-| Proteins          |        0 |              0% |
-| Fibers            |        0 |              0% |
+| Calories          |      210 |             10% |
+| Carbs             |       54 |             23% |
+| Fats              |      0.6 |              1% |
+| Proteins          |      0.8 |              1% |
+| Fibers            |        6 |             17% |
+
+- Bananas (2 medium)
+        _~210cal, ~54g carbs, ~0.6g fat, ~0.8g protein, ~6g fiber_
 
 ### Dinner
 
