Log pulled pork dinner entry

--- a/food-journal/2025-12-01.md
+++ b/food-journal/2025-12-01.md
@@ -1,15 +1,15 @@
 # Monday 1st, 2025
 
-Solid breakfast with protein and whole grains; two fruit breaks added carbs, so keep dinner protein- and vegetable-heavy to balance.
+Solid breakfast with protein and whole grains; two fruit breaks added carbs, and a lean protein dinner keeps fats moderate while boosting protein toward the goal.
 
 ## Nutritional Facts
 
 | Nutritional Facts | Goal | Consumed | Progress |
 |-------------------|-----:|---------:|---------:|
-| Calories          | 2100 |      900 |      43% |
+| Calories          | 2100 |     1142 |      54% |
 | Carbs             | 230g |      172 |      75% |
-| Fats              |  70g |     19.2 |      27% |
-| Proteins          | 160g |     29.6 |      19% |
+| Fats              |  70g |     31.9 |      46% |
+| Proteins          | 160g |     56.9 |      36% |
 | Fibers            |  35g |       17 |      49% |
 
 ## Entries
@@ -75,15 +75,18 @@ Extra fruit adds quick carbs; aim for protein and veggies at dinner to level out
 
 ### Dinner
 
-No entries logged yet.
+Lean protein adds a solid boost without carbs; fats remain moderate, keeping room for a light veggie side if needed.
 
 | Nutritional Facts | Consumed | Impact (vs Goal) |
 |-------------------|---------:|-----------------:|
-| Calories          |        0 |              0% |
+| Calories          |      242 |             11% |
 | Carbs             |        0 |              0% |
-| Fats              |        0 |              0% |
-| Proteins          |        0 |              0% |
+| Fats              |     12.7 |             18% |
+| Proteins          |     27.3 |             17% |
 | Fibers            |        0 |              0% |
+
+- Pulled pork (100g)
+        _~242cal, ~0g carbs, ~12.7g fat, ~27.3g protein_
 
 ### Night Snack
 
