Update dinner entry with pork and sides

--- a/food-journal/2025-12-01.md
+++ b/food-journal/2025-12-01.md
@@ -1,16 +1,16 @@
 # Monday 1st, 2025
 
-Solid breakfast with protein and whole grains; two fruit breaks added carbs, and a lean protein dinner keeps fats moderate while boosting protein toward the goal.
+Solid breakfast with protein and whole grains; fruit snacks add carbs, and a hearty pork-and-veg dinner brings protein up while pushing fats near the target.
 
 ## Nutritional Facts
 
 | Nutritional Facts | Goal | Consumed | Progress |
 |-------------------|-----:|---------:|---------:|
-| Calories          | 2100 |     1142 |      54% |
-| Carbs             | 230g |      172 |      75% |
-| Fats              |  70g |     31.9 |      46% |
-| Proteins          | 160g |     56.9 |      36% |
-| Fibers            |  35g |       17 |      49% |
+| Calories          | 2100 |     1745 |      83% |
+| Carbs             | 230g |      205 |      89% |
+| Fats              |  70g |       63 |      90% |
+| Proteins          | 160g |    103.9 |      65% |
+| Fibers            |  35g |       25 |      71% |
 
 ## Entries
 
@@ -75,18 +75,22 @@ Extra fruit adds quick carbs; aim for protein and veggies at dinner to level out
 
 ### Dinner
 
-Lean protein adds a solid boost without carbs; fats remain moderate, keeping room for a light veggie side if needed.
+Big pork portion with root-veg mash and salad raises protein substantially while bringing fats close to the daily cap; carbs stay moderate and fiber improves.
 
 | Nutritional Facts | Consumed | Impact (vs Goal) |
 |-------------------|---------:|-----------------:|
-| Calories          |      242 |             11% |
-| Carbs             |        0 |              0% |
-| Fats              |     12.7 |             18% |
-| Proteins          |     27.3 |             17% |
-| Fibers            |        0 |              0% |
+| Calories          |      845 |             40% |
+| Carbs             |       33 |             14% |
+| Fats              |     43.8 |             63% |
+| Proteins          |     74.3 |             46% |
+| Fibers            |        8 |             23% |
 
-- Pulled pork (100g)
-        _~242cal, ~0g carbs, ~12.7g fat, ~27.3g protein_
+- Pulled pork (250g total)
+        _~605cal, ~0g carbs, ~31.8g fat, ~68.3g protein_
+- Celeriac & white-carrot mash (~150g, with a little butter)
+        _~120cal, ~25g carbs, ~4g fat, ~3g protein, ~5g fiber_
+- Salad bowl (mixed greens, tomato, vinaigrette)
+        _~120cal, ~8g carbs, ~8g fat, ~3g protein, ~3g fiber_
 
 ### Night Snack
 
