Log homemade cookies and update nutrition totals

--- a/food-journal/2025-12-01.md
+++ b/food-journal/2025-12-01.md
@@ -1,30 +1,30 @@
 # Monday 1st, 2025
 
-Solid breakfast with protein and whole grains; fruit snacks add carbs, and a hearty pork-and-veg dinner brings protein up while pushing fats near the target.
+Balanced meals through dinner, but a big homemade-cookie portion pushed calories, carbs, and fats well past targets; protein remains moderate, so prioritize vegetables, lean protein, and water tomorrow to re-center.
 
 ## Nutritional Facts
 
 | Nutritional Facts | Goal | Consumed | Progress |
 |-------------------|-----:|---------:|---------:|
-| Calories          | 2100 |     1745 |      83% |
-| Carbs             | 230g |      205 |      89% |
-| Fats              |  70g |       63 |      90% |
-| Proteins          | 160g |    103.9 |      65% |
-| Fibers            |  35g |       25 |      71% |
+| Calories          | 2100 |     2385 |     114% |
+| Carbs             | 230g |      293 |     127% |
+| Fats              |  70g |       95 |     136% |
+| Proteins          | 160g |    111.9 |      70% |
+| Fibers            |  35g |       29 |      83% |
 
 ## Entries
 
 ### Breakfast
 
-Protein-forward open-faced sandwiches added; breakfast now covers a quarter of daily calories, so keep lunch/dinner vegetable-heavy with lean protein.
+Protein-forward open-faced sandwiches deliver about one-fifth of the day's calories; keep next meals vegetable-heavy with lean protein to counter the late sweets.
 
-| Nutritional Facts | Consumed | Impact (vs Goal) |
-|-------------------|---------:|-----------------:|
-| Calories          |      480 |             23% |
-| Carbs             |       64 |             28% |
-| Fats              |       18 |             26% |
-| Proteins          |       28 |             18% |
-| Fibers            |        5 |             14% |
+| Nutritional Facts | Consumed | Impact (vs Totals) |
+|-------------------|---------:|------------------:|
+| Calories          |      480 |              20% |
+| Carbs             |       64 |              22% |
+| Fats              |       18 |              19% |
+| Proteins          |       28 |              25% |
+| Fibers            |        5 |              17% |
 
 - Coffee (3) with milk (~30ml each)
         _~120cal, ~15g carbs, ~9g fat, ~3g protein_
@@ -35,55 +35,55 @@ Protein-forward open-faced sandwiches added; breakfast now covers a quarter of d
 
 No entries logged yet.
 
-| Nutritional Facts | Consumed | Impact (vs Goal) |
-|-------------------|---------:|-----------------:|
-| Calories          |        0 |              0% |
-| Carbs             |        0 |              0% |
-| Fats              |        0 |              0% |
-| Proteins          |        0 |              0% |
-| Fibers            |        0 |              0% |
+| Nutritional Facts | Consumed | Impact (vs Totals) |
+|-------------------|---------:|------------------:|
+| Calories          |        0 |               0% |
+| Carbs             |        0 |               0% |
+| Fats              |        0 |               0% |
+| Proteins          |        0 |               0% |
+| Fibers            |        0 |               0% |
 
 ### Lunch
 
-Quick fruit boost adds carbs; keep the next meal protein-forward with veggies to steady blood sugar.
+Quick fruit boost adds carbs; aim for protein and fiber later to cushion the sugar-heavy evening.
 
-| Nutritional Facts | Consumed | Impact (vs Goal) |
-|-------------------|---------:|-----------------:|
-| Calories          |      210 |             10% |
-| Carbs             |       54 |             23% |
-| Fats              |      0.6 |              1% |
-| Proteins          |      0.8 |              1% |
-| Fibers            |        6 |             17% |
+| Nutritional Facts | Consumed | Impact (vs Totals) |
+|-------------------|---------:|------------------:|
+| Calories          |      210 |               9% |
+| Carbs             |       54 |              18% |
+| Fats              |      0.6 |               1% |
+| Proteins          |      0.8 |               1% |
+| Fibers            |        6 |              21% |
 
 - Bananas (2 medium)
         _~210cal, ~54g carbs, ~0.6g fat, ~0.8g protein, ~6g fiber_
 
 ### Afternoon Snack
 
-Extra fruit adds quick carbs; aim for protein and veggies at dinner to level out the macro balance.
+Extra fruit adds quick carbs; the later sweets make protein and vegetables even more important at upcoming meals.
 
-| Nutritional Facts | Consumed | Impact (vs Goal) |
-|-------------------|---------:|-----------------:|
-| Calories          |      210 |             10% |
-| Carbs             |       54 |             23% |
-| Fats              |      0.6 |              1% |
-| Proteins          |      0.8 |              1% |
-| Fibers            |        6 |             17% |
+| Nutritional Facts | Consumed | Impact (vs Totals) |
+|-------------------|---------:|------------------:|
+| Calories          |      210 |               9% |
+| Carbs             |       54 |              18% |
+| Fats              |      0.6 |               1% |
+| Proteins          |      0.8 |               1% |
+| Fibers            |        6 |              21% |
 
 - Bananas (2 medium)
         _~210cal, ~54g carbs, ~0.6g fat, ~0.8g protein, ~6g fiber_
 
 ### Dinner
 
-Big pork portion with root-veg mash and salad raises protein substantially while bringing fats close to the daily cap; carbs stay moderate and fiber improves.
+Big pork portion with root-veg mash and salad raises protein substantially; fats were acceptable until the cookies pushed them past the cap.
 
-| Nutritional Facts | Consumed | Impact (vs Goal) |
-|-------------------|---------:|-----------------:|
-| Calories          |      845 |             40% |
-| Carbs             |       33 |             14% |
-| Fats              |     43.8 |             63% |
-| Proteins          |     74.3 |             46% |
-| Fibers            |        8 |             23% |
+| Nutritional Facts | Consumed | Impact (vs Totals) |
+|-------------------|---------:|------------------:|
+| Calories          |      845 |              35% |
+| Carbs             |       33 |              11% |
+| Fats              |     43.8 |              46% |
+| Proteins          |     74.3 |              66% |
+| Fibers            |        8 |              28% |
 
 - Pulled pork (250g total)
         _~605cal, ~0g carbs, ~31.8g fat, ~68.3g protein_
@@ -94,12 +94,15 @@ Big pork portion with root-veg mash and salad raises protein substantially while
 
 ### Night Snack
 
-No entries logged yet.
+Large homemade-cookie portion capped the day with a sugar- and fat-heavy spike, pushing calories and carbs above goal; hydrate and plan a lighter, protein-forward breakfast tomorrow.
 
-| Nutritional Facts | Consumed | Impact (vs Goal) |
-|-------------------|---------:|-----------------:|
-| Calories          |        0 |              0% |
-| Carbs             |        0 |              0% |
-| Fats              |        0 |              0% |
-| Proteins          |        0 |              0% |
-| Fibers            |        0 |              0% |
+| Nutritional Facts | Consumed | Impact (vs Totals) |
+|-------------------|---------:|------------------:|
+| Calories          |      640 |              27% |
+| Carbs             |       88 |              30% |
+| Fats              |       32 |              34% |
+| Proteins          |        8 |               7% |
+| Fibers            |        4 |              14% |
+
+- Homemade cookies (about four large pieces)
+        _~640cal, ~88g carbs, ~32g fat, ~8g protein, ~4g fiber_
