Adjust Dec 1 cookie estimate

--- a/food-journal/2025-12-01.md
+++ b/food-journal/2025-12-01.md
@@ -1,30 +1,30 @@
 # Monday 1st, 2025
 
-Balanced meals through dinner, but a big homemade-cookie portion pushed calories, carbs, and fats well past targets; protein remains moderate, so prioritize vegetables, lean protein, and water tomorrow to re-center.
+ Solid meals and fruits kept things moderate until dessert; a modest serving of butter cookies nudged calories just under goal while leaving protein short, so add lean protein and vegetables tomorrow to stay balanced.
 
 ## Nutritional Facts
 
 | Nutritional Facts | Goal | Consumed | Progress |
 |-------------------|-----:|---------:|---------:|
-| Calories          | 2100 |     2385 |     114% |
-| Carbs             | 230g |      293 |     127% |
-| Fats              |  70g |       95 |     136% |
-| Proteins          | 160g |    111.9 |      70% |
-| Fibers            |  35g |       29 |      83% |
+| Calories          | 2100 |     2069 |      99% |
+| Carbs             | 230g |      241 |     105% |
+| Fats              |  70g |       81 |     116% |
+| Proteins          | 160g |    107.5 |      67% |
+| Fibers            |  35g |       25 |      71% |
 
 ## Entries
 
 ### Breakfast
 
-Protein-forward open-faced sandwiches deliver about one-fifth of the day's calories; keep next meals vegetable-heavy with lean protein to counter the late sweets.
+Protein-forward open-faced sandwiches deliver about one-fifth of the day's calories; keep later meals vegetable-heavy with lean protein to offset the cookie fats.
 
 | Nutritional Facts | Consumed | Impact (vs Totals) |
 |-------------------|---------:|------------------:|
-| Calories          |      480 |              20% |
-| Carbs             |       64 |              22% |
-| Fats              |       18 |              19% |
-| Proteins          |       28 |              25% |
-| Fibers            |        5 |              17% |
+| Calories          |      480 |              23% |
+| Carbs             |       64 |              27% |
+| Fats              |       18 |              22% |
+| Proteins          |       28 |              26% |
+| Fibers            |        5 |              20% |
 
 - Coffee (3) with milk (~30ml each)
         _~120cal, ~15g carbs, ~9g fat, ~3g protein_
@@ -45,45 +45,45 @@ No entries logged yet.
 
 ### Lunch
 
-Quick fruit boost adds carbs; aim for protein and fiber later to cushion the sugar-heavy evening.
+Quick fruit boost adds carbs; aim for protein and fiber later to cushion the dessert fats.
 
 | Nutritional Facts | Consumed | Impact (vs Totals) |
 |-------------------|---------:|------------------:|
-| Calories          |      210 |               9% |
-| Carbs             |       54 |              18% |
+| Calories          |      210 |              10% |
+| Carbs             |       54 |              22% |
 | Fats              |      0.6 |               1% |
 | Proteins          |      0.8 |               1% |
-| Fibers            |        6 |              21% |
+| Fibers            |        6 |              24% |
 
 - Bananas (2 medium)
         _~210cal, ~54g carbs, ~0.6g fat, ~0.8g protein, ~6g fiber_
 
 ### Afternoon Snack
 
-Extra fruit adds quick carbs; the later sweets make protein and vegetables even more important at upcoming meals.
+Extra fruit adds quick carbs; the later cookies make protein and vegetables even more important at upcoming meals.
 
 | Nutritional Facts | Consumed | Impact (vs Totals) |
 |-------------------|---------:|------------------:|
-| Calories          |      210 |               9% |
-| Carbs             |       54 |              18% |
+| Calories          |      210 |              10% |
+| Carbs             |       54 |              22% |
 | Fats              |      0.6 |               1% |
 | Proteins          |      0.8 |               1% |
-| Fibers            |        6 |              21% |
+| Fibers            |        6 |              24% |
 
 - Bananas (2 medium)
         _~210cal, ~54g carbs, ~0.6g fat, ~0.8g protein, ~6g fiber_
 
 ### Dinner
 
-Big pork portion with root-veg mash and salad raises protein substantially; fats were acceptable until the cookies pushed them past the cap.
+Big pork portion with root-veg mash and salad raises protein substantially; fats were acceptable until the cookies nudged them past the cap.
 
 | Nutritional Facts | Consumed | Impact (vs Totals) |
 |-------------------|---------:|------------------:|
-| Calories          |      845 |              35% |
-| Carbs             |       33 |              11% |
-| Fats              |     43.8 |              46% |
-| Proteins          |     74.3 |              66% |
-| Fibers            |        8 |              28% |
+| Calories          |      845 |              41% |
+| Carbs             |       33 |              14% |
+| Fats              |     43.8 |              54% |
+| Proteins          |     74.3 |              69% |
+| Fibers            |        8 |              32% |
 
 - Pulled pork (250g total)
         _~605cal, ~0g carbs, ~31.8g fat, ~68.3g protein_
@@ -94,15 +94,15 @@ Big pork portion with root-veg mash and salad raises protein substantially; fats
 
 ### Night Snack
 
-Large homemade-cookie portion capped the day with a sugar- and fat-heavy spike, pushing calories and carbs above goal; hydrate and plan a lighter, protein-forward breakfast tomorrow.
+Butter cookies added a sugar- and butter-heavy dessert; calories stay under target but carbs and fats creep over, so hydrate and plan a lighter, protein-forward breakfast tomorrow.
 
 | Nutritional Facts | Consumed | Impact (vs Totals) |
 |-------------------|---------:|------------------:|
-| Calories          |      640 |              27% |
-| Carbs             |       88 |              30% |
-| Fats              |       32 |              34% |
-| Proteins          |        8 |               7% |
-| Fibers            |        4 |              14% |
+| Calories          |      324 |              16% |
+| Carbs             |       36 |              15% |
+| Fats              |       18 |              22% |
+| Proteins          |      3.6 |               3% |
+| Fibers            |        0 |               0% |
 
-- Homemade cookies (about four large pieces)
-        _~640cal, ~88g carbs, ~32g fat, ~8g protein, ~4g fiber_
+- Butter cookies (6 average Danish-style)
+        _~324cal, ~36g carbs, ~18g fat, ~3.6g protein, ~0g fiber_
